--- a/dashfront/src/app/components/header/header.component.html
+++ b/dashfront/src/app/components/header/header.component.html
@@ -13,6 +13,9 @@
   </div>
 
   <div>
+    <ul>
+      <li *ngFor="let result of searchResult">{{result}}</li>
+    </ul>
     <table class="table table-info">
       <thead class="tab-pane">
         <tr>
