Début DBSatnogs, définition du cors ou proxy nécessaire.

--- a/dashfront/src/app/components/header/header.component.html
+++ b/dashfront/src/app/components/header/header.component.html
@@ -14,7 +14,7 @@
 
   <div>
     <ul>
-      <li *ngFor="let result of searchResult">{{result}}</li>
+      <li *ngFor="let result of searchResult" (click)="fetch(result.split('[')[1].split(']')[0]);">{{result}}</li>
     </ul>
     <table class="table table-info">
       <thead class="tab-pane">
