--- a/dashfront/src/app/components/select-satellites/select-satellites.component.html
+++ b/dashfront/src/app/components/select-satellites/select-satellites.component.html
@@ -1,18 +1,21 @@
-<header class="header Header">
-    <ul>
-        <li><img class="btn btn-outline-dark" src="#">bouton footer</li>
-        <li><a class="btn btn-outline-dark" href="#">bouton footer</a></li>
-        <li><a class="btn btn-outline-dark" href="#">bouton footer</a></li>
-    </ul>
-    <input [(ngModel)]="searchTerm" (keyup.enter)="search()" placeholder="Search...">
+header class="header Header">
+<ul>
+    <li><img class="btn btn-outline-dark" src="#">bouton footer</li>
+    <li><a class="btn btn-outline-dark" href="#">bouton footer</a></li>
+    <li><a class="btn btn-outline-dark" href="#">bouton footer</a></li>
+</ul>
+<input [(ngModel)]="searchTerm" (keyup.enter)="search()" placeholder="Search...">
 </header>
 
 <div>
     <div>
-        <h4>Infos</h4>
+        <h4>Positions</h4>
     </div>
 
     <div>
+        <ul>
+            <li *ngFor="let result of searchResult" (click)="fetch(result.split('[')[1].split(']')[0]);">{{result}}</li>
+        </ul>
         <table class="table table-info">
             <thead class="tab-pane">
                 <tr>
@@ -26,6 +29,32 @@
                 <tr>
                     <td>{{Infos?.info?.satname}}</td>
                     <td>{{Infos?.info?.satid}}</td>
+                    <td>{{(positions$ | async)?.satlatitude}}</td>
+                    <td>{{(positions$ | async)?.satlongitude}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<div>
+    <div>
+        <h4>Infos</h4>
+    </div>
+    <div>
+        <table>
+            <thead>
+                <tr>
+                    <th *ngFor="let item of descInfos | keyvalue">{{ item.key }}</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td *ngFor="let item of descInfos | keyvalue">
+                        <img *ngIf="item.key === 'img'" [src]="item.value" alt="Image">
+                        <a *ngIf="item.key === 'site'" [href]="item.value" target="_blank">{{ item.value }}</a>
+                        <span *ngIf="item.key !== 'img' && item.key !== 'site'">{{ item.value }}</span>
+                    </td>
                 </tr>
             </tbody>
         </table>
