--- a/dashfront/src/app/components/select-satellites/select-satellites.component.html
+++ b/dashfront/src/app/components/select-satellites/select-satellites.component.html
@@ -1,4 +1,4 @@
-header class="header Header">
+<header class="header Header">
 <ul>
     <li><img class="btn btn-outline-dark" src="#">bouton footer</li>
     <li><a class="btn btn-outline-dark" href="#">bouton footer</a></li>
