--- a/dashfront/src/app/components/footer/footer.component.html
+++ b/dashfront/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
-  <div class="container">
-    <span class="text-muted">
-      <a href="https://github.com/meo-pill/IPM-L3">
+  <div>
+    <span class="nav">
+      <a href="https://github.com/meo-pill/IPM-L3" class="nav-link">
         <img src="https://github.com/fluidicon.png" alt="Logo GitHub" style="width: 1vw; height: 1vw;">
         Le lien vers le projet sur GitHub
       </a>
