--- a/dashfront/src/app/components/select-satellites/select-satellites.component.html
+++ b/dashfront/src/app/components/select-satellites/select-satellites.component.html
@@ -1,4 +1,4 @@
-<header class="header Header">
+<header class="header">
 <ul>
     <li><img class="btn btn-outline-dark" src="#">bouton footer</li>
     <li><a class="btn btn-outline-dark" href="#">bouton footer</a></li>
@@ -16,8 +16,8 @@
         <ul>
             <li *ngFor="let result of searchResult" (click)="fetch(result.split('[')[1].split(']')[0]);">{{result}}</li>
         </ul>
-        <table class="table table-info">
-            <thead class="tab-pane">
+        <table class="table-bordered">
+            <thead>
                 <tr>
                     <th>Nom</th>
                     <th>Id</th>
@@ -25,7 +25,7 @@
                     <th>Longitude</th>
                 </tr>
             </thead>
-            <tbody class="tab-content">
+            <tbody>
                 <tr>
                     <td>{{Infos?.info?.satname}}</td>
                     <td>{{Infos?.info?.satid}}</td>
@@ -42,7 +42,7 @@
         <h4>Infos</h4>
     </div>
     <div>
-        <table>
+        <table class="table-bordered">
             <thead>
                 <tr>
                     <th *ngFor="let item of descInfos | keyvalue">{{ item.key }}</th>
