--- a/dashfront/src/assets/scss/blk-design-system/custom/_variables.scss
+++ b/dashfront/src/assets/scss/blk-design-system/custom/_variables.scss
@@ -94,6 +94,12 @@ $colors: map-merge(
 $default-color-opacity: rgba(182, 182, 182, 0.6) !default;
 $orange-color: #f96332 !default;
 
+$bleu-claire: #979FCB !default;
+$bleu-fonce: #384177 !default;
+$jaune-orange: #E2B667 !default;
+$blanc: #ffffff !default;
+$noir: #000000 !default;
+
 $default: #344675 !default;
 $primary: #e14eca !default;
 $secondary: #f4f5f7 !default;
