--- a/dashfront/src/app/components/footer/footer.component.html
+++ b/dashfront/src/app/components/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div>
-    <span class="nav">
+    <span>
       <a href="https://github.com/meo-pill/IPM-L3" class="nav-link">
-        <img src="https://github.com/fluidicon.png" alt="Logo GitHub" style="width: 1vw; height: 1vw;">
+        <img src="https://github.com/fluidicon.png" alt="Logo GitHub" class="icon icon-text icon-sm">
         Le lien vers le projet sur GitHub
       </a>
     </span>
