je vais me tuer

--- a/dashfront/src/app/components/select-satellites/select-satellites.component.html
+++ b/dashfront/src/app/components/select-satellites/select-satellites.component.html
@@ -27,8 +27,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>{{Infos?.info?.satname}}</td>
-                    <td>{{Infos?.info?.satid}}</td>
+                    <td>{{Pos?.info?.satname}}</td>
+                    <td>{{Pos?.info?.satid}}</td>
                     <td>{{(positions$ | async)?.satlatitude}}</td>
                     <td>{{(positions$ | async)?.satlongitude}}</td>
                 </tr>
