fix scss + add header + add image

--- a/dashfront/src/app/components/select-satellites/select-satellites.component.html
+++ b/dashfront/src/app/components/select-satellites/select-satellites.component.html
@@ -1,11 +1,11 @@
-<header class="header Header">
+<div class="header Header">
   <ul>
     <li><img class="btn btn-outline-dark" src="#">bouton footer</li>
     <li><a class="btn btn-outline-dark" href="#">bouton footer</a></li>
     <li><a class="btn btn-outline-dark" href="#">bouton footer</a></li>
   </ul>
   <input [(ngModel)]="searchTerm" (keyup.enter)="search()" placeholder="Search...">
-</header>
+</div>
 
 <div>
   <div>
