--- a/dashfront/src/app/header/header.component.html
+++ b/dashfront/src/app/header/header.component.html
@@ -1,3 +1,6 @@
 <header class="page-header header-small">
-  header works!
+  <div id="fond-logo">
+    <img src="../../assets/img/en_entier_noir.png" alt="logo" class="icon icon-xl" id="logo-entier">
+    <img src="../../assets/img/logo_en_titre_noir.png" alt="SATNET" class="icon icon-xl" id="logo-titre">
+  </div>
 </header>
