--- a/dashfront/src/app/header/header.component.scss
+++ b/dashfront/src/app/header/header.component.scss
@@ -10,3 +10,19 @@
 #logo-titre{
   float: right;
 }
+
+#header-page{
+  height: 80vh;
+  max-height: 80vh;
+  background-image: url('../../assets/img/image-fond.jpg');
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: auto;
+  height: auto;
+  max-height: auto;
+  max-width: auto;
+}
+#background-header {
+
+}
