--- a/dashfront/src/app/header/header.component.scss
+++ b/dashfront/src/app/header/header.component.scss
@@ -12,6 +12,7 @@
 }
 
 #header-page{
+  min-height: 80vh;
   height: 80vh;
   max-height: 80vh;
   background-image: url('../../assets/img/image-fond.jpg');
@@ -22,7 +23,4 @@
   height: auto;
   max-height: auto;
   max-width: auto;
-}
-#background-header {
-
 }
