--- a/dashfront/src/app/header/header.component.html
+++ b/dashfront/src/app/header/header.component.html
@@ -3,4 +3,12 @@
     <img src="../../assets/img/en_entier_noir.png" alt="logo" class="icon icon-xl" id="logo-entier">
     <img src="../../assets/img/logo_en_titre_noir.png" alt="SATNET" class="icon icon-xl" id="logo-titre">
   </div>
+  <div>
+    <h1 class="title" id="title"> Suivez des satellites en temps REEL</h1>
+    <p id="text-presentation">
+      Satnet vous permet de localiser des satellites en temps réel sur une carte.
+      Le satellite suivi par défaut est l’ISS (ID NORAD: 25544) mais il est possible pour vous d’en sélectionner d’autres.
+      Vous pouvez également utiliser les filtres pour ne voir que des satellites d’une certaine catégorie.
+    </p>
+  </div>
 </header>
