--- a/dashfront/src/app/header/header.component.scss
+++ b/dashfront/src/app/header/header.component.scss
@@ -28,7 +28,7 @@
 #title{
   color: white;
   text-align: center;
-  margin: 10vh;
+  margin: 5vh;
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -37,8 +37,9 @@
 #text-presentation{
   color: white;
   text-align: center;
-  text-wrap: wrap;
   margin: 5vh;
+  margin-left: 15vw;
+  margin-right: 15vw;
   font-size: 1em;
   text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black; // Simule un contour
 
