deplacement componant header

--- a/dashfront/src/app/components/header/header.component.html
+++ b/dashfront/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="page-header" id="header-page">
   <div id="fond-logo">
-    <img src="../../assets/img/en_entier_noir.png" alt="logo" class="icon icon-xl" id="logo-entier">
-    <img src="../../assets/img/logo_en_titre_noir.png" alt="SATNET" class="icon icon-xl" id="logo-titre">
+    <img src="../../../assets/img/en_entier_noir.png" alt="logo" class="icon icon-xl" id="logo-entier">
+    <img src="../../../assets/img/logo_en_titre_noir.png" alt="SATNET" class="icon icon-xl" id="logo-titre">
   </div>
   <div>
     <h1 class="title" id="title"> Suivez des satellites en temps REEL</h1>
