--- a/dashfront/src/app/components/header/header.component.scss
+++ b/dashfront/src/app/components/header/header.component.scss
@@ -15,7 +15,7 @@
   min-height: 80vh;
   height: 80vh;
   max-height: 80vh;
-  background-image: url('../../assets/img/image-fond.jpg');
+  background-image: url('../../../assets/img/image-fond.jpg');
   background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
