--- a/dashfront/src/app/components/header/header.component.scss
+++ b/dashfront/src/app/components/header/header.component.scss
@@ -31,6 +31,7 @@
   margin: 5vh;
   font-weight: bold;
   text-transform: uppercase;
+  text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black; // Simule un contour
 }
 
 
