ajout recherche stitky

--- a/dashfront/src/app/components/header/header.component.html
+++ b/dashfront/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <img src="../../../assets/img/en_entier_noir.png" alt="logo" class="icon icon-xl" id="logo-entier">
     <img src="../../../assets/img/logo_en_titre_noir.png" alt="SATNET" class="icon icon-xl" id="logo-titre">
   </div>
-  <div>
+  <div id="info">
     <h1 class="title" id="title"> Suivez des satellites en temps REEL</h1>
     <p id="text-presentation">
       Satnet vous permet de localiser des satellites en temps réel sur une carte.
