--- a/dashfront/src/app/components/select-satellites/select-satellites.component.html
+++ b/dashfront/src/app/components/select-satellites/select-satellites.component.html
@@ -10,7 +10,7 @@
     <input [(ngModel)]="searchTerm" (keyup.enter)="search()" placeholder="Search...">
   </div>
 </div>
-
+<!--
 <div>
   <div>
     <h4>Positions</h4>
@@ -64,6 +64,8 @@
     </table>
   </div>
 </div>
+-->
+<app-googlemaps></app-googlemaps>
 
 <div id="info-sat">
 
@@ -124,3 +126,5 @@
     </div>
   </div>
 </div>
+
+<div></div>
