--- a/dashfront/src/app/components/select-satellites/select-satellites.component.html
+++ b/dashfront/src/app/components/select-satellites/select-satellites.component.html
@@ -65,6 +65,19 @@
   </div>
 </div>
 -->
+<div id="next-map">
+  <div class="card card-coin" id="result-recherche">
+    <div class="card-hearder card-coin">
+      <h3 class="card-title">recherche</h3>
+    </div>
+    <div class="card-body">
+      <ul class="list-group">
+        <li *ngFor="let result of searchResult" (click)="fetch(result.split('[')[1].split(']')[0]);" class="list-group-item">{{result}}</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
 <app-googlemaps></app-googlemaps>
 
 <div id="info-sat">
