--- a/dashfront/src/app/components/select-satellites/select-satellites.component.scss
+++ b/dashfront/src/app/components/select-satellites/select-satellites.component.scss
@@ -1,12 +1,14 @@
 #recherche-sat{
   background: white;
 }
-
 .navbar{
   position: sticky;
   top:0;
 }
-
+input{
+  outline: none;
+  width: 100%;
+}
 .search-bar{
   margin-left: 1vw;
   width: 30vw;
@@ -16,22 +18,27 @@
   margin: 1%;
   border-radius: 10px;
 }
-
 .card-hearder{
   background-color: #384177;
 }
-
 .card-title{
   margin: 3%;
-}
-
-input{
-  outline: none;
-  width: 100%;
 }
 .list-group-item{
   color: black;
   text-align: left;
+}
+
+#next-map{
+  float: left;
+  width: 22vw;
+  margin-left: 1vw;
+  margin-top: 1vw;
+  max-height: 85vh;
+}
+
+#info-sat{
+
 }
 
 .card-infos{
@@ -39,7 +46,6 @@ input{
   float: left;
   clear: left;
 }
-
 .card-detail{
   width: 41%;
   float: right;
@@ -51,6 +57,4 @@ input{
   height: auto;
 }
 
-#info-sat{
 
-}
