--- a/dashfront/src/app/components/header/header.component.scss
+++ b/dashfront/src/app/components/header/header.component.scss
@@ -33,6 +33,7 @@
   color: white;
   text-align: center;
   margin: 5vh;
+  font-size: 4em;
   font-weight: bold;
   text-transform: uppercase;
   text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black; // Simule un contour
@@ -45,7 +46,7 @@
   margin: 5vh;
   margin-left: 15vw;
   margin-right: 15vw;
-  font-size: 1em;
+  font-size: 2vw;
   text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black; // Simule un contour
 
 }
