--- a/dashfront/src/app/components/footer/footer.component.html
+++ b/dashfront/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <span>
       <a href="https://github.com/meo-pill/IPM-L3" class="nav-link">
         <img src="https://github.com/fluidicon.png" alt="Logo GitHub" class="icon icon-text icon-sm">
-        Le lien vers le projet sur GitHub
+        Lien vers le projet sur GitHub
       </a>
     </span>
   </div>
