Description changeante lors d'un clic sur un Marker

--- a/dashfront/src/app/components/select-satellites/select-satellites.component.html
+++ b/dashfront/src/app/components/select-satellites/select-satellites.component.html
@@ -134,7 +134,7 @@
     </div>
     <div class="card-body">
       <ul *ngFor="let item of descInfos | keyvalue" class="list-group">
-        <li *ngIf="item.key === 'status'" class="list-group-item">{{ item.value }}</li>
+        <li *ngIf="item.key === 'description'" class="list-group-item">{{ item.value }}</li>
       </ul>
     </div>
   </div>
